--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://datascintist-abusufian.github.io/biohybrid-heart-valve",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -19,5 +22,8 @@
     "tailwindcss": "^3.3.3",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.29"
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
