--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "biohybrid-heart-valve",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "private": true,
   "homepage": "https://datascintist-abusufian.github.io/biohybrid-heart-valve",
   "scripts": {
     "dev": "vite",
@@ -14,14 +13,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "tailwindcss": "^3.3.3",
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.29"
+    "vite": "^4.4.5"
   },
   "devDependencies": {
     "gh-pages": "^5.0.0"
